--- a/SmartSchool.WebAPI/SmartSchool.WebAPI.csproj
+++ b/SmartSchool.WebAPI/SmartSchool.WebAPI.csproj
@@ -4,5 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
-
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" version="3.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" version="3.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" version="3.1.0" />    
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" version="3.1.0" />    
+  </ItemGroup>
 </Project>
