--- a/SmartSchool.WebAPI/SmartSchool.WebAPI.csproj
+++ b/SmartSchool.WebAPI/SmartSchool.WebAPI.csproj
@@ -9,5 +9,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" version="3.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" version="3.1.0" />    
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" version="3.1.0" />    
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" version="3.1.2" />    
   </ItemGroup>
 </Project>
