--- a/SmartSchool.WebAPI/SmartSchool.WebAPI.csproj
+++ b/SmartSchool.WebAPI/SmartSchool.WebAPI.csproj
@@ -10,5 +10,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" version="3.1.0" />    
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" version="3.1.0" />    
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" version="3.1.2" />    
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" version="7.0.0" />    
   </ItemGroup>
 </Project>
